docs/victoriametrics/victoria-metrics-operator/vmagent-example-vmagent-out.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/instance: example-vmagent
    app.kubernetes.io/name: vmagent
    managed-by: vm-operator
  name: vmagent-example-vmagent-out
  namespace: vm
spec:
  ports:
    - name: http
      port: 8429
      protocol: TCP
      targetPort: 8429
  selector:
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/instance: example-vmagent
    app.kubernetes.io/name: vmagent
    managed-by: vm-operator
  sessionAffinity: None
  type: NodePort
