docs/victoriametrics/victoria-metrics-operator/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmagent-example-vmagent
  namespace: vm
spec:
  ingressClassName: nginx
  rules:
    - host: vmagent-example-vmagent.local.tanshilin.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: vmagent-example-vmagent
                port:
                  number: 8429
